# RoVLA-Nano

./: LICENSE  README.md
vla_system/: vla_cli.py
vla_system/action_node/: package.xml  setup.py
vla_system/action_node/action_node/: action_node.py
vla_system/config/: vla_params.yaml
vla_system/coordinator_node/: package.xml  setup.py
vla_system/coordinator_node/coordinator_node/: coordinator_node.py
vla_system/gazebo/: realsense_d435.urdf  vla_world.world
vla_system/interfaces/: CMakeLists.txt  package.xml
vla_system/interfaces/msg/: ActionResult.msg  ObjectDetection.msg  TaskCommand.msg
vla_system/language_node/: package.xml  setup.py
vla_system/language_node/language_node/: language_node.py
vla_system/launch/: gazebo.launch.py  vla_full.launch.py
vla_system/scripts/: download_yolo_model.py  inject_command.py  monitor_topics.py
vla_system/tests/: run_all_tests.py  test_integration.py  test_language_parser.py
vla_system/vision_node/: package.xml  setup.py
vla_system/vision_node/vision_node/: vision_node.py
vla_system/vla_system/: package.xml  setup.py
vla_system/vla_system/vla_system/: cli.py
vla_system/web_ui/: index.html
