<?xml version="1.0"?>
<package format="3">
  <name>action_node</name>
  <version>0.1.0</version>
  <description>VLA action node — MoveIt2 pick-and-place executor for Franka Panda</description>
  <maintainer email="you@example.com">VLA Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vla_interfaces</depend>

  <exec_depend>moveit_ros_planning_interface</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
