<?xml version="1.0"?>
<package format="3">
  <name>vision_node</name>
  <version>0.1.0</version>
  <description>VLA vision node — YOLOv11 object detection with depth estimation</description>
  <maintainer email="you@example.com">VLA Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>vla_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
